the page about the developer has been compiled and adapted + the desktop has been made and the comparison page has almost been adapted

--- a/dev/assets/styles/main.scss
+++ b/dev/assets/styles/main.scss
@@ -39,6 +39,9 @@ body {
 @import './pages/developers-page';
 @import './pages/detailed-card-developer-page';
 @import './pages/favorite-objects-page';
+@import './pages/no-favorite-objects-page';
+@import './pages/compare-page';
+@import './pages/about-developer-page';
 
 @import './parts/layouts';
 @import './parts/components';
