--- a/dev/assets/styles/pages/detailed-card-page.scss
+++ b/dev/assets/styles/pages/detailed-card-page.scss
@@ -56,7 +56,8 @@
     .developer,
     .master-plan,
     .documentation,
-    .layouts {
+    .layouts,
+    .awards {
         .main-container {
             padding: 0;
         }
@@ -77,7 +78,9 @@
     .documentation,
     .customer-reviews,
     .objects,
-    .layouts {
+    .layouts,
+    .awards,
+    .objects-map {
         margin-top: 60px;
     }
 }
