--- a/dev/assets/styles/parts/_components.scss
+++ b/dev/assets/styles/parts/_components.scss
@@ -39,3 +39,5 @@
 @import './components/review';
 @import './components/objects';
 @import './components/layouts';
+@import './components/awards';
+@import './components/objects-map';
