--- a/dev/pages/include/components/compare-bar.html
+++ b/dev/pages/include/components/compare-bar.html
@@ -93,11 +93,11 @@
                                     <span class="product-card__address">227 Major Macke</span>
                                 </div>
                             </div>
-                            <div class="compare-bar__trashcan">
-                                <svg class="compare-bar__trashcan-icon">
+                            <div class="product-card__trashcan">
+                                <svg class="product-card__trashcan-icon">
                                     <use xlink:href="./assets/icons/sprite-svg.svg#trashcan"/>
                                 </svg>
-                                <span class="compare-bar__trashcan-text">Delete</span>
+                                <span class="product-card__trashcan-text">Delete</span>
                             </div>
                         </div>
                     </div>
@@ -172,11 +172,11 @@
                                     <span class="product-card__address">227 Major Macke</span>
                                 </div>
                             </div>
-                            <div class="compare-bar__trashcan">
-                                <svg class="compare-bar__trashcan-icon">
+                            <div class="product-card__trashcan">
+                                <svg class="product-card__trashcan-icon">
                                     <use xlink:href="./assets/icons/sprite-svg.svg#trashcan"/>
                                 </svg>
-                                <span class="compare-bar__trashcan-text">Delete</span>
+                                <span class="product-card__trashcan-text">Delete</span>
                             </div>
                         </div>
                     </div>
@@ -251,11 +251,11 @@
                                     <span class="product-card__address">227 Major Macke</span>
                                 </div>
                             </div>
-                            <div class="compare-bar__trashcan">
-                                <svg class="compare-bar__trashcan-icon">
+                            <div class="product-card__trashcan">
+                                <svg class="product-card__trashcan-icon">
                                     <use xlink:href="./assets/icons/sprite-svg.svg#trashcan"/>
                                 </svg>
-                                <span class="compare-bar__trashcan-text">Delete</span>
+                                <span class="product-card__trashcan-text">Delete</span>
                             </div>
                         </div>
                     </div>
@@ -330,11 +330,11 @@
                                     <span class="product-card__address">227 Major Macke</span>
                                 </div>
                             </div>
-                            <div class="compare-bar__trashcan">
-                                <svg class="compare-bar__trashcan-icon">
+                            <div class="product-card__trashcan">
+                                <svg class="product-card__trashcan-icon">
                                     <use xlink:href="./assets/icons/sprite-svg.svg#trashcan"/>
                                 </svg>
-                                <span class="compare-bar__trashcan-text">Delete</span>
+                                <span class="product-card__trashcan-text">Delete</span>
                             </div>
                         </div>
                     </div>
@@ -409,11 +409,11 @@
                                     <span class="product-card__address">227 Major Macke</span>
                                 </div>
                             </div>
-                            <div class="compare-bar__trashcan">
-                                <svg class="compare-bar__trashcan-icon">
+                            <div class="product-card__trashcan">
+                                <svg class="product-card__trashcan-icon">
                                     <use xlink:href="./assets/icons/sprite-svg.svg#trashcan"/>
                                 </svg>
-                                <span class="compare-bar__trashcan-text">Delete</span>
+                                <span class="product-card__trashcan-text">Delete</span>
                             </div>
                         </div>
                     </div>
@@ -488,11 +488,11 @@
                                     <span class="product-card__address">227 Major Macke</span>
                                 </div>
                             </div>
-                            <div class="compare-bar__trashcan">
-                                <svg class="compare-bar__trashcan-icon">
+                            <div class="product-card__trashcan">
+                                <svg class="product-card__trashcan-icon">
                                     <use xlink:href="./assets/icons/sprite-svg.svg#trashcan"/>
                                 </svg>
-                                <span class="compare-bar__trashcan-text">Delete</span>
+                                <span class="product-card__trashcan-text">Delete</span>
                             </div>
                         </div>
                     </div>
@@ -567,11 +567,11 @@
                                     <span class="product-card__address">227 Major Macke</span>
                                 </div>
                             </div>
-                            <div class="compare-bar__trashcan">
-                                <svg class="compare-bar__trashcan-icon">
+                            <div class="product-card__trashcan">
+                                <svg class="product-card__trashcan-icon">
                                     <use xlink:href="./assets/icons/sprite-svg.svg#trashcan"/>
                                 </svg>
-                                <span class="compare-bar__trashcan-text">Delete</span>
+                                <span class="product-card__trashcan-text">Delete</span>
                             </div>
                         </div>
                     </div>
@@ -646,11 +646,11 @@
                                     <span class="product-card__address">227 Major Macke</span>
                                 </div>
                             </div>
-                            <div class="compare-bar__trashcan">
-                                <svg class="compare-bar__trashcan-icon">
+                            <div class="product-card__trashcan">
+                                <svg class="product-card__trashcan-icon">
                                     <use xlink:href="./assets/icons/sprite-svg.svg#trashcan"/>
                                 </svg>
-                                <span class="compare-bar__trashcan-text">Delete</span>
+                                <span class="product-card__trashcan-text">Delete</span>
                             </div>
                         </div>
                     </div>
@@ -725,11 +725,11 @@
                                     <span class="product-card__address">227 Major Macke</span>
                                 </div>
                             </div>
-                            <div class="compare-bar__trashcan">
-                                <svg class="compare-bar__trashcan-icon">
+                            <div class="product-card__trashcan">
+                                <svg class="product-card__trashcan-icon">
                                     <use xlink:href="./assets/icons/sprite-svg.svg#trashcan"/>
                                 </svg>
-                                <span class="compare-bar__trashcan-text">Delete</span>
+                                <span class="product-card__trashcan-text">Delete</span>
                             </div>
                         </div>
                     </div>
