--- a/dev/assets/styles/media/max-767.scss
+++ b/dev/assets/styles/media/max-767.scss
@@ -209,6 +209,20 @@
         }
     }
 
+    .favorite-objects-page {
+        .card-section {
+            &--property {
+                .card-section {
+                    &__wrapper-cards {
+                        grid-template-columns: repeat(2, minmax(100px, 1fr));
+                        grid-column-gap: 10px;
+                        grid-row-gap: 10px;
+                    }
+                }
+            }
+        }
+    }
+
     .review {
         padding-bottom: 16px;
         
