--- a/dev/assets/styles/parts/ui/favorites-icon.scss
+++ b/dev/assets/styles/parts/ui/favorites-icon.scss
@@ -27,6 +27,8 @@
 
         use {
             fill: transparent;
+            stroke: $white;
+            stroke-width: 1.3;
             transition: fill $transition-time;
         }
     }
